Changed some stuff on the code and added functionality to expang the image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <main>
         <form action="#">
-            <label for="counter-label">Label : </label><input type="text" name="counter-label" required maxlength="23">
+            <label for="counter-label">Label : </label><input type="text" name="counter-label" required maxlength="50">
             <div class="cover-input">
                 <label for="cover"></label>
                 <input type="file" name="cover" accept=".jpg, .jpeg, .png" id="cover">
@@ -25,6 +25,12 @@
             <button class="add-counter-button">Add Counter</button>
         </form>
         <section class="counters">
+        </section>
+        <section class="modal">
+            <div class="modal-content">
+                <img src="" alt="counter image">
+                <button></button>
+            </div>
         </section>
     </main>
 </body>
