--- a/index.html
+++ b/index.html
@@ -33,5 +33,18 @@
             </div>
         </section>
     </main>
+    <div class="warning">
+        <div class="warning-content">
+            <div class="warning-info">
+                <h3>Do you really wish to delete</h3>
+                <p>Lorem ipsum dolor, adipisicing elit. Mollitia, obcaecati.</p>
+                <h3>?</h3>
+            </div>
+            <div class="buttons">
+                <button class="delete">Delete</button>
+                <button class="cancel">Cancel</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
